Ensure a permission prompt is shown for voice search on the old NTP

The old NTP should show a permission prompt when the first voice search
happens. However when permission delegation was enabled it caused the
wrong origin to be used for the request: chrome://newtab instead of the
search origin (e.g. google.com). This CL fixes the origin so that the
search origin is again used for the request.

This bug does not impact the new NTP.

Bug: 881742
Change-Id: Ic70c39d2adb2efafbea3f5c8b89d462c9f01352c
Reviewed-on: https://chromium-review.googlesource.com/1214976
Reviewed-by: Timothy Loh <timloh@chromium.org>
Commit-Queue: Raymes Khoury <raymes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589852}