chrome/browser/permissions/permission_manager_unittest.cc
@@ -19,6 +19,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "chrome/browser/vr/vr_tab_helper.h"
 #include "chrome/common/chrome_features.h"
 #include "chrome/common/url_constants.h"
+#include "chrome/common/webui_url_constants.h"
 #include "chrome/test/base/chrome_render_view_host_test_harness.h"
 #include "chrome/test/base/testing_profile.h"
 #include "components/content_settings/core/browser/host_content_settings_map.h"
@@ -613,6 +614,7 @@ TEST_F(PermissionManagerTest, GetCanonicalOriginSearch) {
   const GURL remote_ntp = GURL(std::string("chrome-search://") +
                                chrome::kChromeSearchRemoteNtpHost);
   const GURL other_chrome_search = GURL("chrome-search://not-local-ntp");
+  const GURL top_level_ntp(chrome::kChromeUINewTabURL);
 
   // "Normal" URLs are not affected by GetCanonicalOrigin.
   EXPECT_EQ(google_com, GetPermissionControllerDelegate()->GetCanonicalOrigin(
@@ -626,14 +628,16 @@ TEST_F(PermissionManagerTest, GetCanonicalOriginSearch) {
 
   // The local NTP URL gets mapped to the Google base URL.
   EXPECT_EQ(google_base, GetPermissionControllerDelegate()->GetCanonicalOrigin(
-                             local_ntp, local_ntp));
+                             local_ntp, top_level_ntp));
   // However, other chrome-search:// URLs, including the remote NTP URL, are
   // not affected.
   EXPECT_EQ(remote_ntp, GetPermissionControllerDelegate()->GetCanonicalOrigin(
-                            remote_ntp, remote_ntp));
+                            remote_ntp, top_level_ntp));
+  EXPECT_EQ(google_com, GetPermissionControllerDelegate()->GetCanonicalOrigin(
+                            google_com, top_level_ntp));
   EXPECT_EQ(other_chrome_search,
             GetPermissionControllerDelegate()->GetCanonicalOrigin(
-                other_chrome_search, other_chrome_search));
+                other_chrome_search, top_level_ntp));
 }
 
 TEST_F(PermissionManagerTest, GetCanonicalOriginPermissionDelegation) {
